--- a/BLL/BLL.csproj
+++ b/BLL/BLL.csproj
@@ -53,8 +53,11 @@
     <Compile Include="IRepository.cs" />
     <Compile Include="PreAdmissionRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RoleRepository.cs" />
+    <Compile Include="RoleUsersRepository.cs" />
     <Compile Include="SchoolSessionRepository.cs" />
     <Compile Include="SooRepository.cs" />
+    <Compile Include="UsersRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DAL\DAL.csproj">
