--- a/SCHERP/Web.config
+++ b/SCHERP/Web.config
@@ -23,6 +23,7 @@
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
+    <!--<customErrors mode="On" defaultRedirect="~/Error/404" />-->  
   <pages>
     <namespaces>
       <add namespace="Kendo.Mvc.UI" /></namespaces></pages>
